# strongbird

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  eslint.config.js  pyproject.toml
src/strongbird/: __init__.py  batch_reader.py  browser.py  cli.py  cli_orchestrator.py  config.py  crawler.py  extractor.py  formatter.py  image_extractor.py  math.py  parallel.py  services.py  url_expander.py
src/strongbird/js/: __init__.py  mathml_fallback.js  unified_math.js
test/: README.md  README_BATCH_TESTS.md  conftest.py  run_tests.py  test_batch.py  test_cli.py  test_image_extraction.py  test_integration.py  test_math.py  test_math_extraction.py  test_parallel.py  test_suite_legacy.py  test_url_expansion.py
test/fixtures/: comprehensive-math-test.html  test-mathjax.html  test_batch_empty.txt  test_batch_glob.txt  test_batch_mixed.txt  test_batch_simple.txt
